edit mac version setup and run